--- a/social.html
+++ b/social.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
-<body>
-    <div class="img">
-        <a href="#"><img src="assets/img/logo-home.jpg" alt="logo-home"></a>
-        <a href="#"><img src="assets/img/logo-youtube.jpg" alt=""></a>
-        <a href="#"><img src="assets/img/logo-github.jpg" alt=""></a>
-        <a href="#"><img src="assets/img/logo-instagram.jpg" alt=""></a>
-        <a href="#"><img src="assets/img/logo-twitter.jpg" alt=""></a>
-        <a href="#"><img src="assets/img/logo-facebook.jpg" alt=""></a>
-       
-    </div>
-    <iframe src="assets/img/frame-iphone.png" frameborder="0"></iframe>
-    
-</body>
+<boday>
+    <main>
+        <section id="phone">
+            <iframe src="pagina001.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
+        <section id="redes-social">
+           <a href="#" target="tela"><img src="assets/img/logo-home.jpg" alt="logo-home"></a> 
+           <a href="#" target="tela"><img src="assets/img/logo-youtube.jpg" alt="logo-youtube"></a> 
+           <a href="#" target="tela"><img src="assets/img/logo-github.jpg" alt="logo-github"></a> 
+           <a href="#" target="tela"><img src="assets/img/logo-instagram.jpg" alt="logo-instagram"></a> 
+           <a href="#" target="tela"><img src="assets/img/logo-twitter.jpg" alt="logo-twitter"></a> 
+           <a href="#" target="tela"><img src="assets/img/logo-facebook.jpg" alt="logo-facebook"></a> 
+           <a href="#" target="tela"></a> 
+        </section>
+    </main>
+</boday>
 </html>
