--- a/social.html
+++ b/social.html
@@ -13,13 +13,13 @@
             <iframe src="pagina001.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
         <section id="redes-social">
-           <a href="#" target="tela"><img src="assets/img/logo-home.jpg" alt="logo-home"></a> 
-           <a href="#" target="tela"><img src="assets/img/logo-youtube.jpg" alt="logo-youtube"></a> 
-           <a href="#" target="tela"><img src="assets/img/logo-github.jpg" alt="logo-github"></a> 
-           <a href="#" target="tela"><img src="assets/img/logo-instagram.jpg" alt="logo-instagram"></a> 
-           <a href="#" target="tela"><img src="assets/img/logo-twitter.jpg" alt="logo-twitter"></a> 
-           <a href="#" target="tela"><img src="assets/img/logo-facebook.jpg" alt="logo-facebook"></a> 
-           <a href="#" target="tela"></a> 
+           <a href="pagina001.html" target="tela"><img src="assets/img/logo-home.jpg" alt="logo-home"></a> <br>
+           <a href="pagina002.html" target="tela"><img src="assets/img/logo-youtube.jpg" alt="logo-youtube"></a> <br>
+           <a href="pagina003.html" target="tela"><img src="assets/img/logo-github.jpg" alt="logo-github"></a> <br>
+           <a href="pagina004.html" target="tela"><img src="assets/img/logo-instagram.jpg" alt="logo-instagram"></a> <br>
+           <a href="pagina005.html" target="tela"><img src="assets/img/logo-twitter.jpg" alt="logo-twitter"></a> <br>
+           <a href="pagina006.html" target="tela"><img src="assets/img/logo-facebook.jpg" alt="logo-facebook"></a> <br>
+          
         </section>
     </main>
 </boday>
